--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "eslint": "8.34.0",
         "eslint-config-next": "13.1.6",
         "next": "13.1.6",
+        "next-redux-wrapper": "^8.1.0",
+        "nextjs-progressbar": "^0.0.16",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-icons": "^4.7.1",
@@ -23,7 +25,11 @@
         "react-multi-carousel": "^2.8.2",
         "react-redux": "^8.0.5",
         "react-responsive-carousel": "^3.2.23",
+        "react-slick": "^0.29.0",
         "react-toastify": "^9.1.1",
+        "redux": "^4.2.1",
+        "redux-persist": "^6.0.0",
+        "slick-carousel": "^1.8.1",
         "swr": "^2.1.0"
     },
     "devDependencies": {
